# MemAgent

./: .dockerignore  .gitignore  ARCHITECTURE_REVIEW.md  Agno Agentic Application Standards.md  CHECKLIST.md  DEPLOYMENT.md  EXAMPLE_CONVERSATIONS.md  FLOW_DIAGRAMS.md  FLOW_FIX_SUMMARY.md  IMAGE_SECURITY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MEMORY_COLLECTION_UPDATES.md  QUICK_REFERENCE.md  README.md  REFERENCE_PHOTO_FLOW.md  SECURITY.md  SESSION_STATE_FIX.md  TESTING_GUIDE.md  TIMEOUT_FIXES.md  docker-compose.yml  start-all.ps1  start-all.sh  start-backend.ps1
.cursor/rules/: RULE.md
backend/: Dockerfile  dev_server.py  main.py  pyproject.toml
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/agents/: __init__.py  base.py  content_screener.py  context_enricher.py  image_generator.py  memory_collector.py  photo_manager.py  team.py
backend/app/api/: __init__.py  websocket.py
backend/app/api/routes/: auth.py  chat.py  photos.py
backend/app/core/: guardrails.py  jwt_utils.py  llm_errors.py  monitoring.py  security.py  token_tracker.py
backend/app/schemas/: chat.py  memory.py  photo.py
backend/app/storage/: __init__.py  database.py  models.py
backend/app/tools/: __init__.py  exif_writer.py  gemini_image.py  google_photos.py  google_photos_picker.py  location_resolver.py
backend/app/utils/: __init__.py  date_calculator.py
backend/app/workflows/: __init__.py
backend/tests/: __init__.py  test_basic.py
frontend/: DEVELOPMENT.md  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
(+5 files in other folders)
